--- a/my-project/src/app/components/add-notes/add-notes.component.scss
+++ b/my-project/src/app/components/add-notes/add-notes.component.scss
@@ -32,3 +32,13 @@ div:empty:before {
 .div1 {
   margin-top: 2%;
 }
+::ng-deep.note{
+  width: 100%;
+height: auto;
+border:none;
+ border: transparent;
+font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+font-size: 15px;
+outline: none
+
+}
