--- a/my-project/src/app/components/update/update.component.html
+++ b/my-project/src/app/components/update/update.component.html
@@ -26,24 +26,34 @@
   </div>
 
   <mat-card-content class="take_note">
-    <div
-      data-text="Take a note.."
-      id="description"
-      contenteditable="true"
-      *ngIf="!data.isDeleted"
-      class="div2"
-      [innerHTML]="data.description"
-    ></div>
-    <div
-      data-text="Take a note.."
-      id="description"
-      *ngIf="data.isDeleted"
-      contenteditable="false"
-      class="div2"
-      [innerHTML]="data.description"
-    ></div>
+    <div data-text="Take a note.." id="description" contenteditable="true" *ngIf="!data.isDeleted && data.description" class="div2" [innerHTML]="data.description"></div>
+    <div data-text="Take a note.." id="description" *ngIf="data.isDeleted &&  data.description" contenteditable="false" class="div2" [innerHTML]="data.description"></div>
   </mat-card-content>
 
+
+
+    <div class="note" *ngFor="let check of tempArray" fxLayout="row">
+    
+      <mat-checkbox fxFlex="10%" *ngIf="check.status=='open'&& !check.isDeleted" (click)=checkBox(check)></mat-checkbox>
+      <input [(ngModel)]=check.itemName fxFlex="80%" class="note" (keydown)=editing(check,$event)
+      [ngStyle]="{ 'background-color': updateColor }" *ngIf="!check.isDeleted && check.status=='open' ">
+      <mat-icon fxFlex="10%" class="clearIcon" (click)=removeList(check) *ngIf="!check.isDeleted && check.status=='open'">clear</mat-icon>
+    </div>
+
+      <hr *ngIf="checklist">
+      <div fxLayout="row" *ngIf="checklist">
+        <mat-icon fxFlex="5%" *ngIf="!adding">add</mat-icon>
+        <mat-checkbox *ngIf="adding" [(ngModel)]=addCheck  color="primary"></mat-checkbox>
+        <input  fxFlex="95%" class="note" placeholder="List Item" [ngStyle]="{ 'background-color': updateColor }" [(ngModel)]=newList (keydown)=addList($event)/>
+      </div>
+      <hr *ngIf="checklist">
+     
+      <div class="note" *ngFor="let check of tempArray" fxLayout="row">
+        <mat-checkbox fxFlex="10%" checked=true *ngIf="check.status=='close'&& !check.isDeleted" (click)=checkBox(check)></mat-checkbox>
+        <input [(ngModel)]=check.itemName class="note" [ngStyle]="{ 'background-color': updateColor }" style="text-decoration: line-through;" fxFlex="80%" *ngIf="check.status=='close' && !check.isDeleted"
+          (keydown)=editing(check,$event)>
+        <mat-icon fxFlex="10%" class="clearIcon" (click)=removeList(check) *ngIf="!check.isDeleted && check.status=='close'">clear</mat-icon>
+      </div>
   <mat-card-actions flexLayout="row">
     <mat-chip-list>
       <div *ngFor="let data1 of labels">
