--- a/my-project/src/app/components/notes-collection/notes-collection.component.html
+++ b/my-project/src/app/components/notes-collection/notes-collection.component.html
@@ -33,9 +33,18 @@
         </mat-chip>
       </div>
     </mat-chip-list>
+    <mat-chip-list>
+      <div *ngFor="let label of note.reminder">
+        <mat-chip *ngIf="!label.isDeleted">
+        <mat-icon class="clock" mat-icon-button>access_time</mat-icon>
+        {{label | date:"medium"}}
+          <mat-icon matChipRemove (click)="removeRemainder(note.id)">cancel</mat-icon>
+        </mat-chip>
+      </div>
+    </mat-chip-list>
     <mat-card-actions class="action">
         <!-- reminder starts -->
-      <app-reminder [Delete]="note.isDeleted"> </app-reminder>
+      <app-reminder [note]="note" [Delete]="note.isDeleted" (eventEmit)=eventOccured($event)> </app-reminder>
         <!-- reminder starts -->
        <!-- collaborator starts -->
       <app-collaborator [Delete]="note.isDeleted"></app-collaborator>
