--- a/my-project/src/app/components/reminder/reminder.component.html
+++ b/my-project/src/app/components/reminder/reminder.component.html
@@ -4,6 +4,7 @@
 </button>
 </span>
 <mat-menu (click)="$event.stopPropagation();" class="menu" #menu="matMenu" [overlapTrigger]="false">
+  <div *ngIf="flag === false">
   <button (click)="$event.stopPropagation();" mat-menu-item><span>Reminder : </span></button>
   <button (click)="$event.stopPropagation();" mat-menu-item>
       <div><span (click)="remindToday()">Later today</span>
@@ -15,5 +16,50 @@
   </button>
   <button (click)="$event.stopPropagation();" mat-menu-item>
       <div><span (click)="weekRemainder()">Next week</span>
-          <span class="remainder">Mon,8:00 AM</span></div>
+          <span class="remainder">8:00 AM</span></div>
   </button>
+  <div fxLayoutAlign="row">
+    <mat-icon class="clock" mat-icon-button>access_time</mat-icon>
+    <button (click)="$event.stopPropagation();" (click)="flag = true" mat-menu-item><span>Pick date & time
+        </span></button>
+</div>
+</div>
+
+  <div *ngIf="flag === true">
+  <div>
+        <mat-icon mat-icon-button (click)="flag = false; $event.stopPropagation();" >keyboard_backspace</mat-icon>
+        <span class="place1">Pick Date & Time</span><br>
+    </div>
+    <mat-divider></mat-divider>
+    <mat-form-field>
+        <input (click)="$event.stopPropagation();"  matInput [matDatepicker]="dp" [formControl]="date">
+        <mat-datepicker-toggle matSuffix [for]="dp"></mat-datepicker-toggle>
+        <mat-datepicker #dp></mat-datepicker>
+    </mat-form-field>
+    <div fxLayout="row">
+      <mat-form-field (click)="$event.stopPropagation()">
+          <input matInput placeholder="Choose Time" (click)="$event.stopPropagation()" [matMenuTriggerFor]="timeMenu" >
+      </mat-form-field>
+          <mat-icon (click)="$event.stopPropagation()" [matMenuTriggerFor]="timeMenu" class="timeSet">keyboard_arrow_down</mat-icon>
+
+  </div>
+  <mat-menu #timeMenu [overlapTrigger]=false>
+  <div fxLayout="column" *ngFor="let timing of reminders">
+          <button mat-button (click)="reminderBody.time = timing.viewTime" (click)="$event.stopPropagation()">
+
+                  <div fxFlex="35" >{{timing.viewPeriod}}</div>
+                  <div fxFlex="40"></div>
+                  <div fxFlex="35">{{timing.viewTime}}</div>
+
+          </button>
+
+  </div>
+  <div>
+      <button mat-button (click)="$event.stopPropagation()">Custom Time</button>
+  </div>
+</mat-menu>
+<div><button mat-button >Save</button></div>
+
+    </div>
+
+</mat-menu>
