--- a/my-project/src/app/components/navbar/navbar.component.html
+++ b/my-project/src/app/components/navbar/navbar.component.html
@@ -60,7 +60,7 @@
             <button mat-stroked-button (click)="notes()">
               <img class="img" src="../../../assets/images/note.svg">Notes</button>
             <br>
-            <button mat-stroked-button>
+            <button mat-stroked-button (click)="reminder()">
               <img class="img" src="../../../assets/images/reminders.svg">Reminder</button>
           </mat-list>
           <mat-divider></mat-divider>
