--- a/my-project/src/app/components/reminder/reminder.component.html
+++ b/my-project/src/app/components/reminder/reminder.component.html
@@ -25,25 +25,27 @@
 </div>
 </div>
 
-  <div *ngIf="flag === true">
-  <div>
-        <mat-icon mat-icon-button (click)="flag = false; $event.stopPropagation();" >keyboard_backspace</mat-icon>
-        <span class="place1">Pick Date & Time</span><br>
+  <div *ngIf="flag === true" class="menu">
+  <div fxLayout="row" fxLayoutAlign="start center">
+     <div fxFlex=15><mat-icon mat-icon-button (click)="flag = false;  $event.stopPropagation();" >keyboard_backspace</mat-icon></div>
+     <div fxFlex=60 ><span class="place1">Pick Date & Time</span><br></div>
     </div>
     <mat-divider></mat-divider>
+    <div fxLayout="column" fxLayoutAlign="center center">
     <mat-form-field>
-        <input (click)="$event.stopPropagation();"  matInput [matDatepicker]="dp" [formControl]="date">
+        <input (click)="$event.stopPropagation();" [min]="minDate"   matInput [matDatepicker]="dp" [(ngModel)]= "reminderBody.date.value" [formControl]="date">
         <mat-datepicker-toggle matSuffix [for]="dp"></mat-datepicker-toggle>
         <mat-datepicker #dp></mat-datepicker>
     </mat-form-field>
-    <div fxLayout="row">
+    <div fxLayout="row" fxLayoutAlign="center center" >
       <mat-form-field (click)="$event.stopPropagation()">
-          <input matInput placeholder="Choose Time" (click)="$event.stopPropagation()" [matMenuTriggerFor]="timeMenu" >
+          <input matInput placeholder="Choose Time" (click)="$event.stopPropagation()" [matMenuTriggerFor]="timeMenu" [(ngModel)]="reminderBody.time" >
       </mat-form-field>
           <mat-icon (click)="$event.stopPropagation()" [matMenuTriggerFor]="timeMenu" class="timeSet">keyboard_arrow_down</mat-icon>
 
   </div>
-  <mat-menu #timeMenu [overlapTrigger]=false>
+  </div>
+  <mat-menu #timeMenu [overlapTrigger]=false class="menu">
   <div fxLayout="column" *ngFor="let timing of reminders">
           <button mat-button (click)="reminderBody.time = timing.viewTime" (click)="$event.stopPropagation()">
 
@@ -55,10 +57,10 @@
 
   </div>
   <div>
-      <button mat-button (click)="$event.stopPropagation()">Custom Time</button>
+      <button mat-button (click)="$event.stopPropagation()"class="button">Custom Time</button>
   </div>
 </mat-menu>
-<div><button mat-button >Save</button></div>
+<div><button mat-button (click)="addRemCustom(reminderBody.date.value,reminderBody.time)">Save</button></div>
 
     </div>
 
