--- a/my-project/src/app/components/addlabel/addlabel.component.html
+++ b/my-project/src/app/components/addlabel/addlabel.component.html
@@ -4,7 +4,7 @@
 <button mat-stroked-button (click)=createLabel()>
   <img class="img" src="../../../assets/images/label.svg">Create new label</button>
 <div *ngFor="let data of labelList">
-  <button mat-stroked-button (click)=labelClick(data)>
+  <button mat-stroked-button (click)=labelClick(data);displayName(data.label)>
     <img class="img" src="../../../assets/images/labelicon.svg">{{data.label}}</button>
   <br>
 </div>
