--- a/my-project/src/app/components/navbar/navbar.component.scss
+++ b/my-project/src/app/components/navbar/navbar.component.scss
@@ -1,32 +1,27 @@
 .menu {
-  margin-right: 1%;
+  // margin-right: 1%;
   color: black;
 }
 .head {
-  
+
   margin-right: 30px;
+  color: black;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden !important;
+}
+
+
+.view {
+  // margin-right: 20px;
+  // margin-left:0%;
   color: black;
 }
 
-.refresh {
-  margin-left: 25px;
-  margin-right: 20px;
-  color: black;
-}
-.view {
-  margin-right: 40px;
-  color: black;
-}
-.apps {
-  margin-right: 15px;
-  color: black;
-}
-.notify {
-  margin-right: 15px;
-  color: black;
-}
+
 .person {
-  margin-right: 15px;
+  // margin-right: 15px;
+
   color: black;
 }
 .search {
@@ -40,6 +35,11 @@
   outline: none;
   padding: 0px 0px 0px 47px;
 }
+@media only screen and (max-width: 610px) {
+  .search{
+  width: inherit;
+  }
+  }
 .searchicon {
   position: absolute;
   padding-left: 10px;
@@ -123,14 +123,7 @@ input:focus {
 .img {
   margin-right: 20px;
 }
-/* .button1{
-padding-left: 100px;
- width: 20%;
- height: 6%;
- font-size: 11%;
- font-weight: 700;
 
-} */
 .para {
   margin-left: 20px;
 }
@@ -145,7 +138,7 @@ padding-left: 100px;
 
 .button2 {
   margin-left: 109px;
-margin-top: 30px;
+
 
   border: 1px solid black;
   color: black;
@@ -160,5 +153,9 @@ margin-top: 30px;
   width: 40px;
   height: 40px;
   border-radius: 100%;
+}
+.input
+{
+  display:none;
 }
 
